# px4_sitl_catkin

./: CMakeLists.txt  README.md  package.xml
.circleci/: config.yml
launch/: px4_gazebo_sitl.launch
scripts/: install-sitl.sh  record-video.sh  start_sitl.py
