<?xml version="1.0"?>
<package>
  <name>px4_sitl_catkin</name>
  <version>0.0.1</version>
  <description>Catkin wrapper for the PX4 SITL</description>
  <maintainer email="nicolov@users.noreply.github.com">nicolov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <export/>
</package>
